Added most of the simple POST methods and modified the way errors are handled slightly, although I'm in two minds about it.

--- a/InterFAX.Api/InterFAX.Api.csproj
+++ b/InterFAX.Api/InterFAX.Api.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="ApiException.cs" />
     <Compile Include="Documents.ListOptions.cs" />
+    <Compile Include="Dtos\Error.cs" />
     <Compile Include="Dtos\ForwardingEmail.cs" />
     <Compile Include="Dtos\InboundFax.cs" />
     <Compile Include="Dtos\OutboundDocument.cs" />
