--- a/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
+++ b/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
@@ -65,8 +65,13 @@
     <Compile Include="OutboundTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchOptionsTests.cs" />
+    <Compile Include="SendOptionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\testfiles\test.pdf">
+      <Link>test.pdf</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +79,16 @@
       <Project>{1a4809ee-070e-4255-bdd2-2aeecdba5bc5}</Project>
       <Name>InterFAX.Api</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\testfiles\test.html">
+      <Link>test.html</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\testfiles\test.txt">
+      <Link>test.txt</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
