Added document upload session creation and deletion. Also tidying.

--- a/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
+++ b/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DocumentsTests.cs" />
     <Compile Include="InterFAXTests.cs" />
     <Compile Include="InboundListOptionsTests.cs" />
+    <Compile Include="UploadSessionOptionsTests.cs" />
     <Compile Include="OutboundListOptionsTests.cs" />
     <Compile Include="MockHttpMessageHandler.cs" />
     <Compile Include="InboundTests.cs" />
