--- a/InterFAX.Api.Test.Integration/InterFAX.Api.Test.Integration.csproj
+++ b/InterFAX.Api.Test.Integration/InterFAX.Api.Test.Integration.csproj
@@ -50,9 +50,12 @@
     <Compile Include="DocumentsTests.cs" />
     <Compile Include="OutboundTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\testfiles\large.pdf">
+      <Link>large.pdf</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="..\testfiles\test.pdf">
       <Link>test.pdf</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
