--- a/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
+++ b/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchOptionsTests.cs" />
     <Compile Include="SendOptionsTests.cs" />
+    <Compile Include="UtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\testfiles\test.pdf">
