--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - nuget install NUnit.Runners -Version 3.4.1 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release InterFAX.Api.sln
-  - mono ./testrunner/NUnit.Runners.3.4.1/tools/nunit3-console.exe ./InterFAX.Api.Test.Unit/bin/Release/InterFAX.Api.Test.Unit.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.4.1/tools/nunit3-console.exe ./InterFAX.Api.Test.Unit/bin/Release/InterFAX.Api.Test.Unit.dll
