Changed name of entry point due to namespace conflict and updated README accordingly.

--- a/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
+++ b/InterFAX.Api.Test.Unit/InterFAX.Api.Test.Unit.csproj
@@ -57,7 +57,7 @@
     <Compile Include="AccountTests.cs" />
     <Compile Include="HttpClientExtensionsTests.cs" />
     <Compile Include="DocumentsTests.cs" />
-    <Compile Include="InterFAXTests.cs" />
+    <Compile Include="FaxClientTests.cs" />
     <Compile Include="InboundListOptionsTests.cs" />
     <Compile Include="UploadSessionOptionsTests.cs" />
     <Compile Include="OutboundListOptionsTests.cs" />
