Write cassettes for inbound fax calls

--- a/InterFAX.Api.Test.Integration/InterFAX.Api.Test.Integration.csproj
+++ b/InterFAX.Api.Test.Integration/InterFAX.Api.Test.Integration.csproj
@@ -73,7 +73,7 @@
   <ItemGroup>
     <Compile Include="AccountTests.cs" />
     <None Include="cassettes\integration.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Compile Include="extensions\IgnoreMocked.cs" />
     <Compile Include="InboundTests.cs" />
