--- a/InterFAX.Api/InterFAX.Api.csproj
+++ b/InterFAX.Api/InterFAX.Api.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.0</Version>
+    <Version>2.0.1-beta1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/interfax/interfax-dotnet</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/interfax/interfax-dotnet/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/interfax/interfax-dotnet/blob/master/LICENSE</RepositoryUrl>
-    <PackageReleaseNotes>Add support for .NET Core and .Net Standard 2.0</PackageReleaseNotes>
+    <PackageReleaseNotes>Add support for .NET Core and .Net Standard 2.0. Remove dependency on Microsoft.Windows.Compatability</PackageReleaseNotes>
     <Copyright>Copyright 2018</Copyright>
     <PackageTags>Fax Api InterFax Upland</PackageTags>
   </PropertyGroup>
@@ -21,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
